--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y tzdata
-        ls -la $GOROOT/lib/time/zoneinfo.zip
+        ls -la $(go env GOROOT)/lib/time/zoneinfo.zip
 
     - name: Test
       run: task test
