--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,9 @@ jobs:
 
     - name: Test
       run: task test
+    
+    - name: generate test coverage
+      run: task cover
 
     - name: check test coverage
       uses: vladopajic/go-test-coverage@v2
