--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
       run: task test
     
     - name: generate test coverage
-      run: task cover
+      run: go test ./... -coverprofile=./cover.out -coverpkg=./...
 
     - name: check test coverage
       uses: vladopajic/go-test-coverage@v2
